--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>EK</title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         <h1>Eli's Portfolio</h1>
