--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <hr />
         <a href="./public/about.html">About Me</a>
         <a href="./public/contact.html">Contact Me</a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">הודעה חשובה!!</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Important Message!</a>
     </body>
 </html>
